--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
             <version>4.12</version>
         </dependency>
 
+
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-            <scope>test</scope>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
         </dependency>
 
         <!-- End of libraries for GUI testing -->
