--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.github.samtools/htsjdk -->
+        <dependency>
+            <groupId>com.github.samtools</groupId>
+            <artifactId>htsjdk</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+
+
         <!-- End of libraries for GUI testing -->
 
     </dependencies>
