Fixing index error in Digest.

--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <!--<forkCount>4</forkCount>-->
+                    <forkCount>4</forkCount>
                     <!--<systemPropertyVariables>-->
                     <!--<log4j.configuration>${viewpoint.build.testOutputDirectory}/log/log4j.silent.properties-->
                     <!--</log4j.configuration>-->
