--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,11 @@
             <artifactId>guava</artifactId>
             <version>23.6-jre</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.github.samtools</groupId>
+            <artifactId>htsjdk</artifactId>
+            <version>2.9.1-36-gcc8a1a1-SNAPSHOT</version>
+        </dependency>
 
 
         <!-- End of libraries for GUI testing -->
