--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.rosuda.REngine</groupId>
+            <artifactId>REngine</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -91,6 +98,7 @@
                 <type>pom</type>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
 
 
