--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jax</groupId>
     <artifactId>diachromatic</artifactId>
-    <version>0.1.14</version>
+    <version>0.2.1</version>
     <packaging>jar</packaging>
 
     <name>diachromatic</name>
@@ -134,12 +134,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.github.samtools/htsjdk -->
         <dependency>
             <groupId>com.github.samtools</groupId>
@@ -165,6 +159,11 @@
             <version>3.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.72</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
