--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jax</groupId>
     <artifactId>diachromatic</artifactId>
-    <version>0.6.2</version>
+    <version>0.7.0</version>
     <packaging>jar</packaging>
 
     <name>diachromatic</name>
@@ -14,11 +14,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jdk.version>1.8</jdk.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <htsjdk.version>2.23.0</htsjdk.version>
-        <junit.version>5.7.0</junit.version>
-        <junit.platform.version>1.7.0</junit.platform.version>
+        <jdk.version>11</jdk.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <htsjdk.version>3.0.0</htsjdk.version>
+        <junit.version>5.9.0-M1</junit.version>
+        <junit.platform.version>1.9.0-M1</junit.platform.version>
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>2.8.47</mockito.version>
     </properties>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.13.1</version>
+            <version>2.17.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -40,13 +40,13 @@
         <dependency>
             <groupId>org.tukaani</groupId>
             <artifactId>xz</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
         </dependency>
 
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.30</version>
+            <version>2.3.31</version>
         </dependency>
 
         <dependency>
@@ -140,7 +140,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.6.0</version>
+            <version>4.6.1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -167,7 +167,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.0-jre</version>
+            <version>31.1-jre</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -175,16 +175,10 @@
             <version>3.6.1</version>
         </dependency>
 
-        <!-- <dependency>
-           <groupId>com.beust</groupId>
-           <artifactId>jcommander</artifactId>
-           <version>1.72</version>
-       </dependency>
--->
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>4.5.1</version>
+            <version>4.6.3</version>
         </dependency>
 
 
@@ -194,7 +188,7 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
-                <version>2.9.1</version>
+                <version>2.17.2</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -244,7 +238,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
@@ -290,7 +284,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -343,7 +337,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
