--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jax</groupId>
     <artifactId>diachromatic</artifactId>
-    <version>0.7.2</version>
+    <version>0.7.3</version>
     <packaging>jar</packaging>
 
     <name>diachromatic</name>
@@ -20,7 +20,7 @@
         <junit.version>5.9.2</junit.version>
         <junit.platform.version>1.9.2</junit.platform.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>2.8.47</mockito.version>
+        <mockito.version>5.1.1</mockito.version>
     </properties>
 
     <dependencies>
@@ -131,18 +131,12 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
-            <scope>test</scope>
-        </dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.1.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -151,17 +145,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
--->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>5.1.0</version>
-            <scope>test</scope>
-        </dependency>
+
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.5.1</version>
+            <version>${mockito.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>net.bytebuddy</groupId>
@@ -176,6 +165,13 @@
                     <artifactId>objenesis</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-agent -->
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>1.12.22</version>
+            <scope>test</scope>
         </dependency>
 
 
@@ -358,7 +354,7 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.4.0</version>
+                        <version>5.9.2</version>
                     </dependency>
                 </dependencies>
                 <configuration>
