--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jax</groupId>
     <artifactId>diachromatic</artifactId>
-    <version>0.7.3</version>
+    <version>0.7.4</version>
 
     <name>diachromatic</name>
     <url>https://github.com/TheJacksonLaboratory/diachromatic</url>
@@ -16,10 +16,10 @@
         <jdk.version>11</jdk.version>
         <slf4j.version>2.0.6</slf4j.version>
         <htsjdk.version>3.0.4</htsjdk.version>
-        <junit.version>5.9.2</junit.version>
+        <junit.version>5.10.2</junit.version>
         <junit.platform.version>1.9.2</junit.platform.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>5.1.1</mockito.version>
+        <mockito.version>5.10.0</mockito.version>
     </properties>
 
     <dependencies>
@@ -150,6 +150,7 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
             <exclusions>
                 <exclusion>
                     <groupId>net.bytebuddy</groupId>
@@ -209,7 +210,7 @@
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>4.7.1</version>
+            <version>4.7.5</version>
         </dependency>
 
 
@@ -228,9 +229,8 @@
 
 
     <build>
-        <!--  <sourceDirectory>src</sourceDirectory> -->
+        <finalName>Diachromatic</finalName>
         <resources>
-
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
@@ -245,7 +245,6 @@
                     <include>**/*.ftl</include>
                 </includes>
             </resource>
-
             <resource>
                 <directory>src/main/java</directory>
                 <includes>
@@ -265,12 +264,11 @@
                 </includes>
             </resource>
         </resources>
-        <finalName>Diachromatic</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.12.1</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
@@ -317,9 +315,6 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.3.0</version>
-
-
-
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -348,12 +343,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M8</version>
+                <version>3.2.5</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.9.2</version>
+                        <version>5.10.2</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -370,7 +365,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.6.3</version>
                 <configuration>
                     <show>private</show>
                     <nohelp>false</nohelp>
@@ -439,14 +434,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.16.2</version>
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
             </plugin>
         </plugins>
-
-
 
     </build>
 
